<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/g_blue"
    tools:context=".ui.view.fragments.authFragments.LoginFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.97" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/mid_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <ImageView
        android:id="@+id/logo_img"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/chatappicon1"
        app:layout_constraintBottom_toTopOf="@id/signup_discription"
        app:layout_constraintEnd_toStartOf="@id/end_guide"
        app:layout_constraintStart_toEndOf="@id/start_guide"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/confrm_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:autofillHints="phone"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/sign_in_confirm"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/g_white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/signup_discription"
        app:layout_constraintEnd_toStartOf="@id/end_guide"
        app:layout_constraintStart_toEndOf="@id/start_guide" />

    <TextView
        android:id="@+id/signup_discription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/andika"
        android:text="@string/signin_cnfrm_discription"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/g_white"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/mid_guide"
        app:layout_constraintEnd_toStartOf="@id/end_guide"
        app:layout_constraintStart_toEndOf="@id/start_guide" />

    <com.mukeshsolanki.OtpView
        android:id="@+id/otp_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:inputType="number"
        android:itemBackground="@drawable/otp_view_back"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        app:OtpHideLineWhenFilled="true"
        app:OtpItemCount="6"
        app:OtpItemSpacing="7dp"
        app:OtpState_filled="true"
        app:layout_constraintEnd_toStartOf="@id/end_guide"
        app:layout_constraintStart_toEndOf="@id/start_guide"
        app:layout_constraintTop_toBottomOf="@id/mid_guide" />

    <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/confrm_otp_bttn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_background"
        android:backgroundTint="@color/g_white"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textColor="@color/g_blue"
        app:spinning_bar_color="@color/g_blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/end_guide"
        app:layout_constraintStart_toEndOf="@id/start_guide"
        app:layout_constraintTop_toBottomOf="@id/otp_view" />

    <TextView
        android:id="@+id/resend_otp_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/andika"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/g_white"
        android:textSize="11sp"
        app:layout_constraintEnd_toStartOf="@id/end_guide"
        app:layout_constraintStart_toEndOf="@id/start_guide"
        app:layout_constraintTop_toBottomOf="@id/confrm_otp_bttn" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/confrm_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_img" />

</androidx.constraintlayout.widget.ConstraintLayout>