<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/g_blue"
    tools:context=".ui.view.fragments.authFragments.LoginFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.97" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/mid_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/chatappicon1"
        app:layout_constraintBottom_toTopOf="@id/signup_discription"
        app:layout_constraintEnd_toStartOf="@id/end_guide"
        app:layout_constraintStart_toEndOf="@id/start_guide"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:autofillHints="phone"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/login"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/g_white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/signup_discription"
        app:layout_constraintEnd_toStartOf="@id/end_guide"
        app:layout_constraintStart_toEndOf="@id/start_guide" />

    <TextView
        android:id="@+id/signup_discription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/andika"
        android:text="@string/login_discription"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/g_white"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/mid_guide"
        app:layout_constraintEnd_toStartOf="@id/end_guide"
        app:layout_constraintStart_toEndOf="@id/start_guide" />

    <LinearLayout
        android:id="@+id/cntry_liner_lay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:background="@drawable/country_code_background"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@id/end_guide"
        app:layout_constraintStart_toEndOf="@id/start_guide"
        app:layout_constraintTop_toBottomOf="@id/mid_guide">

        <com.hbb20.CountryCodePicker
            android:id="@+id/country_pick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:ccp_arrowColor="@color/white"
            app:ccp_arrowSize="24dp"
            app:ccp_contentColor="@color/g_white"
            app:ccp_showFlag="false"
            app:ccp_showFullName="false"
            app:ccp_showNameCode="false"
            app:ccp_showPhoneCode="true"
            app:ccp_textGravity="RIGHT"
            app:ccp_textSize="24sp" />

        <EditText
            android:id="@+id/phn_num"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:background="@color/g_grey_blue"
            android:inputType="phone"
            android:textColor="@color/g_white"
            android:textSize="24sp" />


    </LinearLayout>

    <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/login_bttn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_background"
        android:backgroundTint="@color/g_white"
        android:text="@string/login"
        android:textAllCaps="false"
        app:spinning_bar_color="@color/g_blue"
        android:textColor="@color/g_blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/end_guide"
        app:layout_constraintStart_toEndOf="@id/start_guide"
        app:layout_constraintTop_toBottomOf="@id/cntry_liner_lay" />

</androidx.constraintlayout.widget.ConstraintLayout>