<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.fragments.chatFragments.ChatFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tollbar_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/g_blue"
        android:paddingStart="4dp"
        android:paddingTop="9dp"
        android:paddingEnd="4dp"
        android:paddingBottom="9dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back_bttn"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="2dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/search_icon"
            android:scaleType="centerCrop"
            android:src="@drawable/small_back_bttn_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_profile_pic"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="15dp"
            android:padding="3dp"
            android:src="@drawable/person_profile_place_holder"
            app:civ_circle_background_color="@color/off_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/back_bttn"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/user_profile_pic"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/usr_name_linear_lay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/poppins"
                    android:maxLength="17"
                    android:maxLines="1"
                    android:textColor="@color/g_white"
                    android:textSize="16sp"
                    tools:text="User name" />

                <TextView
                    android:id="@+id/active_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:maxLength="18"
                    android:maxLines="1"
                    android:textColor="@color/g_white"
                    android:textSize="12sp"
                    tools:text="last seen 25m ago" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/usr_name_linear_lay"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/button_video"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginEnd="6dp"
                    android:padding="2dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="35dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">

                        <com.zegocloud.uikit.prebuilt.call.invite.widget.ZegoSendCallInvitationButton
                            android:id="@+id/video_call_btn"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:background="#1AA8FF" />
                    </LinearLayout>


                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:id="@+id/button_audio"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="12dp"
                    android:padding="2dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="35dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">

                        <com.zegocloud.uikit.prebuilt.call.invite.widget.ZegoSendCallInvitationButton
                            android:id="@+id/audio_call_btn"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:background="#1AA8FF" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tollbar_lay">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.01" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.99" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/chats_recyler_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/mssg_layout"
            app:layout_constraintEnd_toStartOf="@id/end_guide"
            app:layout_constraintStart_toEndOf="@id/start_guide"
            app:layout_constraintTop_toTopOf="parent"
            app:reverseLayout="true" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mssg_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            app:layout_constraintBottom_toTopOf="@id/emoji_picker"
            app:layout_constraintEnd_toStartOf="@id/end_guide"
            app:layout_constraintStart_toEndOf="@id/start_guide">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/message_box_background"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/send_mssg_bttn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageButton
                    android:id="@+id/emoji_bttn"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_margin="5dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/chose_emoji"
                    android:src="@drawable/emoji_ic"
                    app:tint="@color/g_grey" />

                <EditText
                    android:id="@+id/usr_msg_et"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="2"
                    android:autofillHints=" "
                    android:background="@android:color/transparent"
                    android:hint="@string/type_message"
                    android:inputType="textLongMessage" />

                <ImageButton
                    android:id="@+id/attach_media_bttn"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_margin="5dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/attach_media"
                    android:scaleType="centerInside"
                    android:src="@drawable/attach_media_ic"
                    app:tint="@color/g_grey" />

                <ImageButton
                    android:id="@+id/camera_bttn"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_margin="5dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/camera"
                    android:src="@drawable/camera_ic"
                    app:tint="@color/g_grey" />


            </LinearLayout>


            <ImageButton
                android:id="@+id/send_mssg_bttn"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/send_message"
                android:gravity="center_vertical"
                android:src="@drawable/send_mssg_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/g_blue" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.emoji2.emojipicker.EmojiPickerView
            android:id="@+id/emoji_picker"
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:visibility="gone"
            app:emojiGridColumns="9"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>