<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.fragments.chatFragments.UserProfileFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/g_blue"
        android:paddingStart="4dp"
        android:paddingTop="8dp"
        android:paddingEnd="4dp"
        android:paddingBottom="8dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/poppins"
            android:text="Profile"
            android:textColor="@color/g_white"
            android:textSize="26sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/toolbar_lay"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_lay">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/usr_pofile_pic"
                android:layout_width="190dp"
                android:layout_height="190dp"
                android:src="@color/g_black"
                app:civ_circle_background_color="@color/off_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="12dp"
                app:layout_constraintBottom_toBottomOf="@id/usr_pofile_pic"
                app:layout_constraintEnd_toEndOf="@id/usr_pofile_pic">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/select_img_back"
                    android:layout_width="37dp"
                    android:layout_height="37dp"
                    android:src="@color/g_blue"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/usr_img_change"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/change_profile_picture"
                    android:padding="1dp"
                    android:src="@drawable/profile_camera"
                    app:layout_constraintBottom_toBottomOf="@id/select_img_back"
                    app:layout_constraintEnd_toEndOf="@id/select_img_back"
                    app:layout_constraintStart_toStartOf="@id/select_img_back"
                    app:layout_constraintTop_toTopOf="@id/select_img_back" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="7dp"
            android:layout_marginTop="20dp"
            android:hint="@string/name"
            android:padding="12dp"
            android:textColorHint="@color/g_black"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/g_blue"
            app:endIconDrawable="@drawable/edit_icon"
            app:endIconMode="custom"
            app:endIconTint="@color/g_blue"
            app:hintEnabled="true"
            app:startIconDrawable="@drawable/edit_txt_person"
            app:startIconTint="@color/g_blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins"
                android:paddingStart="50dp"
                android:paddingEnd="10dp"
                android:textColor="@color/g_black"
                android:textSize="17sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="7dp"
            android:layout_marginTop="10dp"
            android:hint="@string/phone"
            android:padding="12dp"
            android:textColorHint="@color/g_black"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/g_blue"
            app:endIconDrawable="@drawable/edit_icon"
            app:endIconMode="custom"
            app:endIconTint="@color/g_blue"
            app:hintEnabled="true"
            app:startIconDrawable="@drawable/phone_edit_ic"

            app:startIconTint="@color/g_blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_num_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:enabled="false"
                android:fontFamily="@font/poppins"
                android:paddingStart="50dp"
                android:paddingEnd="10dp"
                android:textColor="@color/g_black"
                android:textSize="17sp" />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="7dp"
            android:layout_marginTop="10dp"
            android:hint="status"
            android:padding="12dp"
            android:textColorHint="@color/g_black"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/g_blue"
            app:endIconDrawable="@drawable/edit_icon"
            app:endIconMode="custom"
            app:endIconTint="@color/g_blue"
            app:hintEnabled="true"
            app:startIconDrawable="@drawable/user_status_txt_ic"
            app:startIconTint="@color/g_blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_status_update"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins"
                android:paddingStart="50dp"
                android:paddingEnd="10dp"
                android:textColor="@color/g_black"
                android:textSize="17sp" />
        </com.google.android.material.textfield.TextInputLayout>



        <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/update_details_bttn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/btn_background"
            android:backgroundTint="@color/g_blue"
            android:fontFamily="@font/poppins"
            android:text="@string/update"
            android:textAllCaps="false"
            android:textColor="@color/g_white"
            android:textSize="17sp"
            app:spinning_bar_color="@color/white" />


        <TextView
            android:id="@+id/logout_usr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="Logout?"
            android:textAlignment="center"
            android:textColor="@color/g_grey"
            android:textSize="16sp" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>